@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline

skinparam classAttributeIconSize 0

class Agenda {
    -addEntry(entry)
    -validateEntry(entry)
    +addEntryAgenda(startingDate, task)
}

class Entry {
    -Date startingDate
    +Entry(startingDate, task)
}


class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getAgenda()
    + getToDoList()
}

enum AgendaStatus {
    PLANNED
    POSTPONED
    CANCELED
    DONE
}

class PostponeEntryController{
-Agenda: agenda
}

class PostponeEntryUI{

}

PostponeEntryUI ..> PostponeEntryController

PostponeEntryController ..> Repositories: repositories

PostponeEntryController ..> Agenda: agenda

Repositories --> Repositories: instance

Repositories --> "1" Agenda

Agenda --> "*" Entry

Entry --> "1" AgendaStatus
@enduml